[package]
name = "RB64CFP"
version = "0.1.0"
edition = "2024"

[dependencies]

cloud-storage = "0.11.1"
reqwest = "0.12.15"
eframe = "0.25"
base64 = "0.22.1"
tokio = { version = "1", features = ["full"] }
zip = "0.6"
google-cloud-storage = { version = "0.24", features = ["rustls-tls"] }
google-cloud-auth = "0.17.2"
